--- a/css/main.css
+++ b/css/main.css
@@ -3584,7 +3584,8 @@ footer {
 
 footer h4 {
     color: #FFFFFF;
-    font-size: 1.6rem;
+    font-family: "montserrat-light", sans-serif;
+    font-size: 1.5rem;
     line-height: 1.313;
     margin-top: 0;
     margin-bottom: 3.6rem;
@@ -3624,18 +3625,17 @@ footer .row {
     padding: 0;
     outline: 0;
     border: none;
-    width: 85px;
+    width: 100px;
     height: 28px;
-    background: url("../images/logo-footer.png") no-repeat center;
-    background-size: 85px 28px;
-    font: 0/0 a;
+    background: url("../images/bhavik_images/logo-footer.png") no-repeat center;
+    background-size: 100px;
     text-shadow: none;
     color: transparent;
     -webkit-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
 }
 
-.footer-subscribe .subscribe-form {
+.footer-subscribe .cv-download {
     margin: 0;
     padding: 0;
     position: relative;
@@ -3645,62 +3645,13 @@ footer .row {
     width: 100%;
 }
 
-.footer-subscribe #mc-form input[type="email"] {
-    width: 100%;
-    height: 5.4rem;
-    padding: 1.2rem 160px 1.2rem 60px;
-    background: url(../images/email-icon.png) 20px center no-repeat, rgba(0, 0, 0, 0.1);
-    background-size: 24px 16px, auto;
-    border: none;
-    margin-bottom: 1.8rem;
-    color: rgba(255, 255, 255, 0.5);
-}
-
-.footer-subscribe #mc-form input[type="email"]:focus {
-    color: #FFFFFF;
-}
-
-.footer-subscribe #mc-form input[type="email"]::-webkit-input-placeholder {
-    color: rgba(255, 255, 255, 0.2);
-}
-
-.footer-subscribe #mc-form input[type="email"]:-moz-placeholder {
-    color: rgba(255, 255, 255, 0.2);
-    /* Firefox 18- */
-}
-
-.footer-subscribe #mc-form input[type="email"]::-moz-placeholder {
-    color: rgba(255, 255, 255, 0.2);
-    /* Firefox 19+ */
-}
-
-.footer-subscribe #mc-form input[type="email"]:-ms-input-placeholder {
-    color: rgba(255, 255, 255, 0.2);
-}
-
-.footer-subscribe #mc-form input[type="email"].placeholder {
-    color: rgba(255, 255, 255, 0.2) !important;
-}
-
-.footer-subscribe #mc-form input[type=submit] {
-    position: absolute;
+.footer-subscribe .cv-download a input[type=submit] {
     top: 0;
     right: 0;
     color: #FFFFFF;
     background: #4db8ff;
     border-color: #4db8ff;
     padding: 0 20px;
-}
-
-.footer-subscribe #mc-form label {
-    color: #FFFFFF;
-    font-family: "montserrat-regular", sans-serif;
-    font-size: 1.3rem;
-    padding: 0 2rem;
-}
-
-.footer-subscribe #mc-form label i {
-    padding-right: 6px;
 }
 
 
