logo quality improved

--- a/css/main.css
+++ b/css/main.css
@@ -1090,8 +1090,8 @@ button.btn--primary:focus,
 input[type="submit"].btn--primary:focus,
 input[type="reset"].btn--primary:focus,
 input[type="button"].btn--primary:focus {
-    background: #33a242;
-    border-color: #33a242;
+    background: #4db8ff;
+    border-color: #4db8ff;
 }
 
 
@@ -1704,7 +1704,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
     padding: 0;
     outline: 0;
     border: none;
-    width: 150px;
+    width: 190px;
     -webkit-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
 }
