--- a/css/main.css
+++ b/css/main.css
@@ -2147,7 +2147,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 .home-content__scroll {
     position: absolute;
     right: calc(50% - 67px);
-    bottom: 12rem;
+    bottom: 11.2rem;
 }
 
 .home-content__scroll a {
@@ -2532,17 +2532,18 @@ html.no-csstransitions .home-content__main {
     margin-bottom: 3.6rem;
 }
 
-.about-desc figure::after {
+.about-desc figure::before {
     content: ' ';
     position: absolute;
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
-    z-index: -1;
+    z-index: inherit;
     border-radius: 50%;
+    width: 100%;
+    height: 100%;
     background-image: url("../images/bhavik_images/portrait.png");
-    background-size: 100% 100%;
     filter: blur(15px) saturate(4);
 }
 
@@ -2550,6 +2551,7 @@ html.no-csstransitions .home-content__main {
     display: block;
     width: 100%;
     height: auto;
+    position: relative;
     border-radius: 50%;
 }
 
@@ -3193,6 +3195,15 @@ html.no-csstransitions .home-content__main {
     padding-bottom: 9rem;
     text-align: center;
     position: relative;
+}
+
+.slick-list .draggable{
+    text-align: center;
+}
+
+.slick-track {
+    display: inline-block;
+    margin: 0 auto;
 }
 
 .clients__slide {
