--- a/css/main.css
+++ b/css/main.css
@@ -3186,6 +3186,186 @@ html.no-csstransitions .home-content__main {
     position: relative;
 }
 
+/*
+ * ## timeline
+ */
+.timeline {
+    margin: 0 auto;
+    font-family: "lora-regular", serif;
+    font-size: 1.7rem;
+    overflow-x: hidden;
+    position: relative;
+}
+
+.timeline h2{
+    font-family: "montserrat-medium", sans-serif
+}
+
+.timeline::before {
+    content: "";
+    background: #4db8ff;
+    width: 2px;
+    height: 100%;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+}
+.timeline-item {
+    width: 100%;
+    margin-bottom: 70px;
+}
+.timeline-item .timeline-content:hover, .timeline-item .timeline-content:focus {
+    background-color: #0C0C0C;
+}
+
+.timeline-item:nth-child(even) .timeline-content:hover:after,
+.timeline-item:nth-child(even) .timeline-content:focus:after {
+    border-color: transparent black transparent transparent;
+}
+.timeline-item:nth-child(odd) .timeline-content:hover:after,
+.timeline-item:nth-child(odd) .timeline-content:focus:after {
+    border-color: transparent transparent transparent black;
+}
+.timeline-item .timeline-content {
+    color: white;
+    background-color: #6A6A6A;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+}
+.timeline-item:nth-child(even) .timeline-content {
+    float: right;
+    padding: 40px 30px 10px 30px;
+}
+.timeline-item:nth-child(even) .timeline-content .date {
+    right: auto;
+    left: 0;
+}
+.timeline-item:nth-child(even) .timeline-content::after {
+    content: "";
+    position: absolute;
+    border-style: solid;
+    width: 0;
+    height: 0;
+    top: 30px;
+    left: -15px;
+    border-width: 10px 15px 10px 0;
+    border-color: transparent #6A6A6A transparent transparent;
+}
+
+.timeline-content {
+    position: relative;
+    width: 45%;
+    padding: 10px 30px;
+    border-radius: 4px;
+    background: #f5f5f5;
+    box-shadow: 0 20px 25px -15px rgba(0, 0, 0, 0.3);
+}
+.timeline-content::after {
+    display: block;
+    clear: both;
+    content: "";
+    position: absolute;
+    border-style: solid;
+    width: 0;
+    height: 0;
+    top: 30px;
+    right: -15px;
+    border-width: 10px 0 10px 15px;
+    border-color: transparent transparent transparent #6A6A6A;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+}
+.timeline-img {
+    width: 30px;
+    height: 30px;
+    background: #4db8ff;
+    border-radius: 50%;
+    position: absolute;
+    left: 50%;
+    margin-top: 25px;
+    margin-left: -15px;
+}
+.timeline a {
+    background: #4db8ff;
+    color: #fff;
+    padding: 8px 20px;
+    text-transform: uppercase;
+    font-size: 14px;
+    margin-bottom: 20px;
+    margin-top: 10px;
+    display: inline-block;
+    border-radius: 2px;
+    box-shadow: 0 1px 3px -1px rgba(0, 0, 0, 0.6);
+}
+.timeline a:hover, .timeline a:active, .timeline a:focus {
+    background: #1aa4ff;
+    color: #fff;
+    text-decoration: none;
+}
+.timeline-card {
+    padding: 0 !important;
+}
+.timeline-card p {
+    padding: 0 20px;
+}
+.timeline-card a {
+    margin-left: 20px;
+}
+.timeline-item .timeline-img-header {
+    background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.4)), url("https://picsum.photos/1000/800/?random") center center no-repeat;
+    background-size: cover;
+}
+.timeline-img-header {
+    height: 200px;
+    position: relative;
+    margin-bottom: 20px;
+}
+.timeline h2{
+    color: white;
+}
+.timeline-img-header h2 {
+    position: absolute;
+    bottom: 5px;
+    left: 20px;
+}
+.timeline .date {
+    font-family: "montserrat-medium", sans-serif;
+    background: #4db8ff;
+    display: inline-block;
+    color: #fff;
+    padding: 10px;
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+@media screen and (max-width: 768px) {
+    .timeline::before {
+        left: 50px;
+    }
+    .timeline .timeline-img {
+        left: 50px;
+    }
+    .timeline .timeline-content {
+        max-width: 100%;
+        width: auto;
+        margin-left: 70px;
+    }
+    .timeline .timeline-item:nth-child(even) .timeline-content {
+        float: none;
+    }
+    .timeline .timeline-item:nth-child(odd) .timeline-content::after {
+        content: "";
+        position: absolute;
+        border-style: solid;
+        width: 0;
+        height: 0;
+        top: 30px;
+        left: -15px;
+        border-width: 10px 15px 10px 0;
+        border-color: transparent #f5f5f5 transparent transparent;
+    }
+}
+
 
 /* ------------------------------------------------------------------- 
  * ## slider
